--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    /* background-color:rgb(0, 89, 255); */
+    background-color:rgb(156, 56, 56);
 }
 
 .teamName {
@@ -16,7 +16,7 @@ body {
     border-radius: 30px;
     transform:rotate(5deg);
     text-shadow: 2px 2px 5px;
-    box-shadow: 10px 10px grey;
+    box-shadow: 10px 10px burlywood;
 }
 
 .card-container {
