--- a/style/style.css
+++ b/style/style.css
@@ -2,21 +2,30 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color:rgb(156, 56, 56);
+    background-color:rgb(56, 156, 151);
 }
 
 .teamName {
 
     text-align: center;
+    color:aqua
     
+}
+.card-title {
+    color: aqua
+}
+
+.card-text{
+    color: aqua;
+    /* margin-right: 40%; */
 }
 .card {
     
-    background-color: crimson;
+    background-color: rgb(8, 12, 58);
     border-radius: 30px;
-    transform:rotate(5deg);
+    /* transform:rotate(5deg); */
     text-shadow: 2px 2px 5px;
-    box-shadow: 10px 10px burlywood;
+    box-shadow: 10px 10px rgb(88, 86, 83);
 }
 
 .card-container {
@@ -33,6 +42,8 @@ body {
 
 p {
     padding-left: 25%;
+    color: aquamarine;
+
 }
 
 .card-subtitle {
